--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
                 <!-- Menu buttons -->
                 <div class="flex items-center gap-4">
-                    <button id="mobile-menu-button" class="text-gray-900 hover:text-accent-dark md:hidden">
-                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
-                        </svg>
+                    <button id="mobile-menu-button" class="text-gray-900 hover:text-accent-dark md:hidden relative w-6 h-6">
+                        <span class="hamburger-bar block absolute h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" style="top: 25%"></span>
+                        <span class="hamburger-bar block absolute h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" style="top: 50%"></span>
+                        <span class="hamburger-bar block absolute h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" style="top: 75%"></span>
                     </button>
                 </div>
 
