added huge milestone project

--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier" />
-    <meta description="Soon to be personal biography for Kayden Cormier"/>
+    <meta description="Personal biography for Kayden Cormier"/>
+    <meta name="copyright" content="Kayden Cormier" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/accordion.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
@@ -86,10 +87,10 @@
                         <div class="p-8 md:p-12 space-y-4">
                             <h3 class="text-3xl font-bold text-gray-900 dark:text-white">About Me</h3>
                             <p class="text-lg text-gray-700 dark:text-gray-300">
-                                Hi, I'm Kayden Cormier, a passionate software developer from Sault Ste. Marie, Ontario. My journey in technology started early, growing up with a Super Nintendo and later a Wii, which sparked my love for gaming and eventually programming.
+                                Hi, I'm Kayden Cormier, a passionate software developer from Sault Ste. Marie, Ontario. I recently graduated from the Computer Programming program at Sault College, where I developed strong skills in full-stack development, project management, and cybersecurity. My journey in technology started early, growing up with a Super Nintendo and later a Wii, which sparked my love for gaming and eventually programming.
                             </p>
-                            <p class="text-lg text-gray-700 dark:text-gray-300">
-                                Currently, I'm in my second year of the Computer Programming program at Sault College, where I'm developing my skills in full-stack development and exploring cybersecurity. My path here wasn't direct - after a year at Algoma University, I realized I preferred the hands-on, practical approach of college education over theoretical university studies.
+                            <p class="text-gray-700 dark:text-gray-300">
+                                My experience as a team lead on the Capstone project directly contributed to my professional growth, leading to my promotion to <strong>Shift Supervisor at Starbucks</strong> shortly after graduation.
                             </p>
                         </div>
                     </div>
@@ -188,10 +189,10 @@
                     <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Future Goals</h3>
                     <div class="space-y-4">
                         <p class="text-gray-700 dark:text-gray-300">
-                            I aim to transition into full-time development to make my ideas accessible to a wider audience. I also plan to expand my skill set by learning C, C++, and C# in the future. Additionally, I would like to pursue my hobby of cybersecurity more and maybe see about future employment in that field.
+                            My future goals include expanding my leadership and project management skills, deepening my expertise in full-stack development (especially with Flask and Tailwind CSS), and exploring advanced topics in AI and cybersecurity. I am also committed to growing my business and contributing to open-source projects.
                         </p>
                         <p class="text-gray-700 dark:text-gray-300">
-                            My long-term goal is to contribute to innovative projects that have a positive impact on society. I am particularly interested in areas such as artificial intelligence, cybersecurity, and game development. I believe that technology has the power to transform lives, and I am excited to be a part of that journey.
+                            My long-term goal is to contribute to innovative projects that have a positive impact on society. I am particularly interested in areas such as artificial intelligence, cybersecurity, and Web Development. I believe that technology has the power to transform lives, and I am excited to be a part of that journey.
                         </p>
                     </div>
                 </div>
@@ -205,8 +206,8 @@
                         </p>
                         <ol class="list-decimal list-inside space-y-2 text-gray-700 dark:text-gray-300 pl-4">
                             <li>Super Mario Galaxy</li>
-                            <li>The Legend of Zelda: Ocarina of Time</li>
                             <li>The Legend of Zelda: Breath of the Wild</li>
+                            <li>The Legend of Zelda: Ocarina of Time</li>
                             <li>Super Mario World</li>
                             <li>Stardew Valley</li>
                         </ol>
@@ -238,6 +239,19 @@
                     <div class="space-y-4">
                         <p class="text-gray-700 dark:text-gray-300">
                             K-Games&Collectables represents the intersection of my programming skills and personal passions. As an enthusiast of Pokémon cards, Magic: The Gathering, board games, and D&D, I decided to transform my hobby into a business venture. Rather than relying on expensive third-party platforms, I'm developing a complete e-commerce solution from the ground up.
+                        </p>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            My portfolio and K-Games&Collectables projects are ongoing and evolving. I am actively planning a dynamic e-commerce site, integrating APIs for payment and inventory management, and managing a live business with real customers.
+                        </p>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            <strong>See my work:</strong>
+                            <ul class="list-disc list-inside space-y-2 text-gray-700 dark:text-gray-300 pl-4">
+                                <li>Portfolio Website: <a href="https://kaydencormier.dev/" class="text-accent-light dark:text-accent-dark hover:opacity-80">kaydencormier.dev (this site)</a></li>
+                                <li>K-Games&Collectables: <a href="https://kgamesncollectables.com" class="text-accent-light dark:text-accent-dark hover:opacity-80">kgamesncollectables.com</a></li>
+                                <li>Inventory App: <a href="https://inventory.kgamesncollectables.com" class="text-accent-light dark:text-accent-dark hover:opacity-80">inventory.kgamesncollectables.com (under construction)</a></li>
+                                <li>SPOT Dashboard: <a href="https://spot.kaydencormier.dev" class="text-accent-light dark:text-accent-dark hover:opacity-80">spot.kaydencormier.dev</a></li>
+                                <li>GitHub: <a href="https://github.com/kaydonbob03" class="text-accent-light dark:text-accent-dark hover:opacity-80">github.com/kaydonbob03</a></li>
+                            </ul>
                         </p>
                         <p class="text-gray-700 dark:text-gray-300">
                             This project has become my most rewarding technical challenge, encompassing:
@@ -282,7 +296,6 @@
                         <div class="mt-6">
                             <h4 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">Short-term Goals:</h4>
                             <ul class="list-disc list-inside space-y-2 text-gray-700 dark:text-gray-300 pl-4">
-                                <li>Complete my Computer Programming diploma at Sault College</li>
                                 <li>Launch the full K-Games&Collectables e-commerce platform</li>
                                 <li>Build a strong portfolio of full-stack web applications</li>
                                 <li>Explore advanced web development technologies and frameworks</li>
@@ -319,7 +332,7 @@
                                 <li>Early exposure to programming through summer game development programs</li>
                                 <li>High school computer science courses that sparked my passion</li>
                                 <li>One year at Algoma University in Computer Science</li>
-                                <li>Currently pursuing Computer Programming diploma at Sault College</li>
+                                <li>Received my Computer Programming diploma at Sault College</li>
                             </ul>
                         </div>
                     </div>
@@ -356,6 +369,9 @@
                         </p>
                         <p class="text-gray-700 dark:text-gray-300">
                             This project led to the development of my first documentation website at kaydonbot.xyz, hosted on GitHub Pages. The experience taught me valuable lessons about server management, documentation, and maintaining live services.
+                        </p>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            <strong>Capstone Project:</strong> For details about my Capstone Project and SPOT Collaboration, please visit the <a href="/portfolio.html#Project6" class="text-accent-light dark:text-accent-dark hover:opacity-80">portfolio page (Capstone tab)</a>.
                         </p>
                         <div class="mt-6">
                             <h4 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">Infrastructure Highlights:</h4>
@@ -457,7 +473,7 @@
     <footer class="bg-gray-800 dark:bg-gray-800 mt-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="flex justify-between items-center">
-                <p id="copyright" class="text-gray-100 dark:text-gray-100">Copyright © 2024 All rights reserved - Kayden Cormier</p>
+                <p id="copyright" class="text-gray-100 dark:text-gray-100">Copyright © 2025 All rights reserved - Kayden Cormier</p>
                 <div class="flex space-x-4">
                     <a href="https://www.linkedin.com/in/kayden-cormier" target="_blank" class="hover:opacity-80 transition-opacity">
                         <img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn" class="w-6 h-6">
