--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier" />
     <meta description="Personal Website and Developer Portfolio for Kayden Cormier"/>
+    <meta name="copyright" content="Kayden Cormier" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -128,7 +129,7 @@
     <footer class="bg-gray-800 dark:bg-gray-800 mt-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="flex justify-between items-center">
-                <p id="copyright" class="text-gray-100 dark:text-gray-100">Copyright © 2024 All rights reserved - Kayden Cormier</p>
+                <p id="copyright" class="text-gray-100 dark:text-gray-100">Copyright © 2025 All rights reserved - Kayden Cormier</p>
                 <div class="flex space-x-4">
                     <a href="https://www.linkedin.com/in/kayden-cormier" target="_blank" class="hover:opacity-80 transition-opacity">
                         <img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn" class="w-6 h-6">
